Resolve the warnings from code inspection