@@ -4,7 +4,6 @@ import static java.util.stream.Collectors.collectingAndThen;
 import static java.util.stream.Collectors.toList;
 import static org.seasar.doma.internal.util.AssertionUtil.assertNotNull;
 
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -29,6 +28,6 @@ public class TypeParametersDef {
   }
 
   public List<String> getTypeParameters() {
-    return Collections.unmodifiableList(new ArrayList<>(typeParameterNameMap.values()));
+    return List.copyOf(typeParameterNameMap.values());
   }
 }
